// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/organisms/MapCanvas.vue snapshot can write and select nodes 1`] = `
<div
  class="map-canvas-wrapper"
  hegith="200"
>
  <div
    class="canvas-wrapper"
    tabindex="1"
  >
    <!---->
     
    <svgcanvas-stub
      height="400"
      scale="1"
      width="100"
      x="0"
      y="0"
    >
         
      <svgtextrectangle-stub
        checked="-1"
        childrencount="3"
        class="mind-node"
        commentcount="0"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        root="true"
        stroke="black"
        strokewidth="1"
        text="root"
        textfill="#000000"
        x="-25"
        y="0"
      />
      <svgtextrectangle-stub
        checked="-1"
        childrencount="1"
        class="mind-node"
        commentcount="0"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        stroke="blue"
        strokewidth="2"
        text="aaaa"
        textfill="#000000"
        x="65"
        y="-40"
      />
      <svgtextrectangle-stub
        checked="-1"
        childrencount="0"
        class="mind-node"
        commentcount="3"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        stroke="blue"
        strokewidth="2"
        text="bbbbbbb
bbbbb"
        textfill="#000000"
        x="65"
        y="0"
      />
      <svgtextrectangle-stub
        checked="-1"
        childrencount="0"
        class="mind-node"
        commentcount="2"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        stroke="black"
        strokewidth="1"
        text="cc
cc
ccc"
        textfill="#000000"
        x="65"
        y="40"
      />
      <svgtextrectangle-stub
        checked="-1"
        childrencount="0"
        class="mind-node"
        commentcount="0"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        stroke="black"
        strokewidth="1"
        text="dddd"
        textfill="#000000"
        x="155"
        y="-40"
      />
      <svgtextrectangle-stub
        checked="-1"
        childrencount="0"
        class="mind-node"
        commentcount="0"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        stroke="black"
        strokewidth="1"
        text="xxxx"
        textfill="#000000"
        x="-115"
        y="40"
      />
      <svgtextrectangle-stub
        checked="-1"
        childrencount="2"
        class="mind-node"
        commentcount="0"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        stroke="black"
        strokewidth="1"
        text="zzzz"
        textfill="#000000"
        x="-115"
        y="-20"
      />
      <svgtextrectangle-stub
        checked="-1"
        childrencount="0"
        class="mind-node"
        commentcount="0"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        stroke="black"
        strokewidth="1"
        text="yyyy"
        textfill="#000000"
        x="-205"
        y="-40"
      />
      <svgtextrectangle-stub
        checked="-1"
        childrencount="0"
        class="mind-node"
        commentcount="0"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        stroke="black"
        strokewidth="1"
        text="uuuu"
        textfill="#000000"
        x="-205"
        y="0"
      />
       
      <!---->
       
    </svgcanvas-stub>
  </div>
   
  <div
    class="scale-tool"
  >
    <scaletoolbox-stub
      max="15"
      min="-17.545081794683426"
      scalerate="0"
      step="0.1"
    />
  </div>
   
  <div
    class="history-tool"
  >
    <historytoolbox-stub />
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <commentlist-stub
    class="comment-list"
    comments="[object Object]"
    style="display: none;"
    user="[object Object]"
    users="[object Object]"
  />
   
  <v-snackbar-stub
    bottom="true"
    right="true"
    timeout="2000"
  >
    
    One more click to delete.
  
  </v-snackbar-stub>
</div>
`;

exports[`components/organisms/MapCanvas.vue snapshot full data 1`] = `
<div
  class="map-canvas-wrapper"
  hegith="200"
>
  <div
    class="canvas-wrapper"
    tabindex=""
  >
    <v-icon-stub
      class="lock-button"
    >
      lock
    </v-icon-stub>
     
    <svgcanvas-stub
      height="400"
      scale="1"
      width="100"
      x="0"
      y="0"
    >
         
      <svgtextrectangle-stub
        checked="-1"
        childrencount="3"
        class="mind-node"
        commentcount="0"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        root="true"
        stroke="black"
        strokewidth="1"
        text="root"
        textfill="#000000"
        x="-25"
        y="0"
      />
      <svgtextrectangle-stub
        checked="-1"
        childrencount="1"
        class="mind-node"
        commentcount="0"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        stroke="black"
        strokewidth="1"
        text="aaaa"
        textfill="#000000"
        x="65"
        y="-40"
      />
      <svgtextrectangle-stub
        checked="-1"
        childrencount="0"
        class="mind-node"
        commentcount="3"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        stroke="black"
        strokewidth="1"
        text="bbbbbbb
bbbbb"
        textfill="#000000"
        x="65"
        y="0"
      />
      <svgtextrectangle-stub
        checked="-1"
        childrencount="0"
        class="mind-node"
        commentcount="2"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        stroke="black"
        strokewidth="1"
        text="cc
cc
ccc"
        textfill="#000000"
        x="65"
        y="40"
      />
      <svgtextrectangle-stub
        checked="-1"
        childrencount="0"
        class="mind-node"
        commentcount="0"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        stroke="black"
        strokewidth="1"
        text="dddd"
        textfill="#000000"
        x="155"
        y="-40"
      />
      <svgtextrectangle-stub
        checked="-1"
        childrencount="0"
        class="mind-node"
        commentcount="0"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        stroke="black"
        strokewidth="1"
        text="xxxx"
        textfill="#000000"
        x="-115"
        y="40"
      />
      <svgtextrectangle-stub
        checked="-1"
        childrencount="2"
        class="mind-node"
        commentcount="0"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        stroke="black"
        strokewidth="1"
        text="zzzz"
        textfill="#000000"
        x="-115"
        y="-20"
      />
      <svgtextrectangle-stub
        checked="-1"
        childrencount="0"
        class="mind-node"
        commentcount="0"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        stroke="black"
        strokewidth="1"
        text="yyyy"
        textfill="#000000"
        x="-205"
        y="-40"
      />
      <svgtextrectangle-stub
        checked="-1"
        childrencount="0"
        class="mind-node"
        commentcount="0"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        stroke="black"
        strokewidth="1"
        text="uuuu"
        textfill="#000000"
        x="-205"
        y="0"
      />
       
      <!---->
       
    </svgcanvas-stub>
  </div>
   
  <div
    class="scale-tool"
  >
    <scaletoolbox-stub
      max="15"
      min="-17.545081794683426"
      scalerate="0"
      step="0.1"
    />
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <commentlist-stub
    class="comment-list"
    comments="[object Object]"
    style="display: none;"
    user="[object Object]"
    users="[object Object]"
  />
   
  <v-snackbar-stub
    bottom="true"
    right="true"
    timeout="2000"
  >
    
    One more click to delete.
  
  </v-snackbar-stub>
</div>
`;

exports[`components/organisms/MapCanvas.vue snapshot no data 1`] = `
<div
  class="map-canvas-wrapper"
  hegith="200"
>
  <div
    class="canvas-wrapper"
    tabindex=""
  >
    <v-icon-stub
      class="lock-button"
    >
      lock
    </v-icon-stub>
     
    <svgcanvas-stub
      height="400"
      scale="1"
      width="100"
      x="0"
      y="0"
    >
         
      <svgtextrectangle-stub
        checked="-1"
        childrencount="0"
        class="mind-node"
        commentcount="0"
        fill="#B3E5FC"
        fontsize="10"
        hiddenfamilycount="0"
        root="true"
        stroke="black"
        strokewidth="1"
        text=""
        textfill="#000000"
        x="-25"
        y="0"
      />
       
      <!---->
       
    </svgcanvas-stub>
  </div>
   
  <div
    class="scale-tool"
  >
    <scaletoolbox-stub
      max="15"
      min="-17.545081794683426"
      scalerate="0"
      step="0.1"
    />
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <commentlist-stub
    class="comment-list"
    comments="[object Object]"
    style="display: none;"
    user="[object Object]"
    users="[object Object]"
  />
   
  <v-snackbar-stub
    bottom="true"
    right="true"
    timeout="2000"
  >
    
    One more click to delete.
  
  </v-snackbar-stub>
</div>
`;
